bin/testsuite/tests/compiler/src/errors/compiler1020.swg
#global testerror "Err0722"
func @toto()
{
}